feat: add clear and varargs addRefParticles to FAggregate